src/objects/P7S1_OpportunityApproval__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Freigaben</relationshipLabel>
        <relationshipName>Opportunity_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Account_Owner_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for enabling Account owner approvals.</description>
        <label>Account Owner Approvals TODEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_Asset_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interner Partner (Asset)</label>
        <referenceTo>P7S1_Asset__c</referenceTo>
        <relationshipLabel>Opportunity Freigaben</relationshipLabel>
        <relationshipName>MT_OpportunityApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_ContractEnddate__c</fullName>
        <label>Contract Enddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_ContractStartdate__c</fullName>
        <label>Contract Startdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_MonthlyPayment__c</fullName>
        <label>Fixe monatliche Einnahmen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Type__c</fullName>
        <label>Fixe Umsatzart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_FixRevenueTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_MonthlyShiftingRight_Asset__c</fullName>
        <label>monatliches Schieberecht</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityId__c</fullName>
        <formula>P7S1_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityName__c</fullName>
        <formula>P7S1_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT_OpportunityName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeDigitalEnd__c</fullName>
        <label>Ende Laufzeit (Digital)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeDigitalStart__c</fullName>
        <label>Start Laufzeit (Digital)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeDooHEnd__c</fullName>
        <label>Ende Laufzeit (DooH)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeDooHStart__c</fullName>
        <label>Start Laufzeit (DooH)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVEnd__c</fullName>
        <label>Ende Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVStart__c</fullName>
        <label>Start Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_SLMAccordingToContract__c</fullName>
        <label>SLM laut Vertrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silber</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_SLMAfterYield__c</fullName>
        <label>SLM nach Yield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silber</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_SLMDifference__c</fullName>
        <label>SLM Abweichung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SoundBoard_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enable for sound board approvals.</description>
        <label>SoundBoard Approvals TODEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ApprovalSubmittedFromCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT_Sys_ApprovalSubmittedFromCampaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 1 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldAmount__c</fullName>
        <label>Var. Umsatz 1 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldProduct__c</fullName>
        <label>Var. Umsatz 1 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldUnit__c</fullName>
        <label>Var. Umsatz 1 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue1_RevenuePerUnit__c * MT_VariableRevenue1_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 1 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 2 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldAmount__c</fullName>
        <label>Var. Umsatz 2 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldProduct__c</fullName>
        <label>Var. Umsatz 2 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldUnit__c</fullName>
        <label>Var. Umsatz 2 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue2_RevenuePerUnit__c * MT_VariableRevenue2_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 2 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 3 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldAmount__c</fullName>
        <label>Var. Umsatz 3 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldProduct__c</fullName>
        <label>Var. Umsatz 3 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldUnit__c</fullName>
        <label>Var. Umsatz 3 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue3_RevenuePerUnit__c * MT_VariableRevenue3_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 3 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue_Total__c</fullName>
        <formula>MT_VariableRevenue1_TotalRevenue__c + MT_VariableRevenue2_TotalRevenue__c + MT_VariableRevenue3_TotalRevenue__c + MT_VariableRevenue4_TotalRevenue__c + MT_VariableRevenue5_TotalRevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Revenue Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Variable_Yield_Type__c</fullName>
        <label>Variable Yield Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Share</fullName>
                    <default>true</default>
                    <label>Revenue Share</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_YearlyShiftingRight_Asset__c</fullName>
        <label>jährliches Schieberecht</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwnerUnitCopy__c</fullName>
        <description>Copy of Account owner Unit for use with Sharing</description>
        <inlineHelpText>Copy of Account owner Unit for use with Sharing</inlineHelpText>
        <label>AccountOwnerUnit (Copy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwnerUnit__c</fullName>
        <formula>P7S1_AccountOwner__r.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Accountname__c</fullName>
        <formula>P7S1_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AdImpressions__c</fullName>
        <description>Anzahl der Ad Impressions</description>
        <inlineHelpText>Anzahl der Ad Impressions</inlineHelpText>
        <label>Ad Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_AnnotationApprover__c</fullName>
        <label>Bemerkung Genehmiger</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovalState__c</fullName>
        <label>Genehmigungsstatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eingereicht</fullName>
                </value>
                <value>
                    <fullName>In Diskussion</fullName>
                </value>
                <value>
                    <fullName>Genehmigt</fullName>
                </value>
                <value>
                    <fullName>Abgelehnt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Approved71MDSB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genehmigt 71M DSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovedAccOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genehmigt Account Inhaber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovedBarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genehmigt Barter Freigabe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovedMediaboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genehmigt Media Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_BMVDooHGewichtet__c</fullName>
        <formula>P7S1_BMVDooH__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV DooH gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BMVDooH__c</fullName>
        <inlineHelpText>Brutto Volumen Digital out of Home</inlineHelpText>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BMVOnTopZuBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unterjährige Erhöhung des freigegebenen TV BMVs. On-top Budget muss durch den Ressortvorstand, das Media Board und das Executive Board freigegeben werden.</inlineHelpText>
        <label>BMV on-Top zu Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_BarterCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for Criteria Based Sharing Rule</description>
        <label>Barter (Copy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_BeschreibungCCORahmenfreigabe__c</fullName>
        <inlineHelpText>Rahmenfreigabe: bitte aus dem zur Verfügung stehenden Excel Sheet die entsprechende qualitative Rahmenfreigabe kopieren.

Keine Rahmenfreigabe: die entsprechende schriftliche Freigabe des CCO Boards ist anzuhängen.</inlineHelpText>
        <label>Beschreibung CCO Rahmenfreigabe</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_BeschreibungDooH__c</fullName>
        <label>Beschreibung DooH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_BeschreibungEquity__c</fullName>
        <label>Beschreibung Equity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_BeschreibungFillUp__c</fullName>
        <label>Beschreibung Fill-Up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_BeschreibungRahmenfreigabeMB__c</fullName>
        <inlineHelpText>Rahmenfreigabe: bitte aus dem zur Verfügung stehenden Excel Sheet die entsprechende quantitative Rahmenfreigabe kopieren.</inlineHelpText>
        <label>Beschreibung Rahmenfreigabe Media Board</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_BetragMn3FixGewichtet__c</fullName>
        <formula>P7S1_BetragMn3Fix__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Betrag fix (MN3) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BetragMn3Fix__c</fullName>
        <formula>P7S1_Mn3Digital__c +  P7S1_Mn3TvCustomerIntegration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Betrag fix (MN3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvDigitalGewichtet__c</fullName>
        <formula>P7S1_BmvDigital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvDigital__c</fullName>
        <inlineHelpText>Brutto Media Volumen Digital Werbung</inlineHelpText>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTotalFixGewichtet__c</fullName>
        <formula>P7S1_BmvTotalFix__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV gesamt gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTotalFix__c</fullName>
        <description>Gesamt Brutto Media Volumen
(BMV gesamt TV + BMV Digital +  Brutto Barter Volumen + BMV D&amp;A Digital + BMV DooH)</description>
        <formula>P7S1_BmvTv__c +   P7S1_BmvDigital__c +  P7S1_GrossBarterVolume__c +  P7S1_Bmv_DandADigital__c +  P7S1_BMVDooH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gesamt Brutto Media Volumen
(BMV gesamt TV + BMV Digital +  Brutto Barter Volumen + BMV D&amp;A Digital + BMV DooH)</inlineHelpText>
        <label>BMV gesamt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTvCustomerIntegrationGewichtet__c</fullName>
        <formula>P7S1_BmvTvCustomerIntegration__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV TV Kundenintegration gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTvCustomerIntegration__c</fullName>
        <description>Brutto Media Volumen des Kunden TV Werbeanteils</description>
        <inlineHelpText>Brutto Media Volumen des Kunden TV Werbeanteils</inlineHelpText>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTvGewichtet__c</fullName>
        <formula>P7S1_BmvTv__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV gesamt (TV) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvTv__c</fullName>
        <inlineHelpText>Brutto Media Volumen TV Gesamt</inlineHelpText>
        <label>BMV gesamt (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Bmv_DandADigitalGewichtet__c</fullName>
        <formula>P7S1_Bmv_DandADigital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV D&amp;A Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Bmv_DandADigital__c</fullName>
        <description>Brutto Media Volumen D&amp;A Digitale Werbefläche (D&amp;A Assets)</description>
        <inlineHelpText>Brutto Media Volumen D&amp;A Digitale Werbefläche (D&amp;A Assets)</inlineHelpText>
        <label>BMV D&amp;A Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_CCOFreigabe__c</fullName>
        <inlineHelpText>Fallen die qualitativen Kriterien unter die bestehenden CCO Board Rahmenfreigaben?</inlineHelpText>
        <label>CCO Freigabe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>keine Rahmenfreigabe</fullName>
                </value>
                <value>
                    <fullName>Rahmenfreigabe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_CashYieldTvCustomerIntegration__c</fullName>
        <formula>IF(
 P7S1_BmvTvCustomerIntegration__c = 0 ,
 0 ,
 ( P7S1_Mn3TvCustomerIntegration__c / P7S1_BmvTvCustomerIntegration__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN3 TV Kundenintegration / BMV TV Kundenintegration</inlineHelpText>
        <label>Yield TV Kundenintegration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_CashZahlung__c</fullName>
        <label>Cash Zahlung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionBarter__c</fullName>
        <description>Beschreibung Inhalte Medien-Baustein Barter</description>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein Barter</inlineHelpText>
        <label>Beschreibung Barter-Bestandteil</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionDandA__c</fullName>
        <description>Beschreibung Inhalte D&amp;A Digitale Umsatzanteile</description>
        <inlineHelpText>Beschreibung Inhalte D&amp;A Digitale Umsatzanteile</inlineHelpText>
        <label>Beschreibung D&amp;A Digitale Umsatzanteile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionDigital__c</fullName>
        <description>Beschreibung Inhalte Medien-Baustein Digital</description>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein Digital</inlineHelpText>
        <label>Beschreibung Digital</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionOtherRevenue__c</fullName>
        <description>Beschreibung Inhalte sonstige Umsatzanteile</description>
        <inlineHelpText>Beschreibung Inhalte sonstige Umsatzanteile</inlineHelpText>
        <label>Beschreibung sonstiger Umsatzanteile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionTv__c</fullName>
        <description>Beschreibung Inhalte Medien-Baustein TV</description>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein TV</inlineHelpText>
        <label>Beschreibung TV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DescriptionVariableRevenue__c</fullName>
        <description>Beschreibung Inhalte des variablen Umsatzanteils und Hintergründe zu deren Kalkulationsbasis</description>
        <inlineHelpText>Beschreibung Inhalte des variablen Umsatzanteils und Hintergründe zu deren Kalkulationsbasis</inlineHelpText>
        <label>Beschreibung Variable Umsatzanteile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Description__c</fullName>
        <label>Bemerkung Antragsteller</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DigitalCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital (Copy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_DooH7ScreenCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper Field for Opportunity Sharing with 7Screen, gets filled by Process</description>
        <label>DooH (7Screen) (Copy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_EigenerBuchwertinEUR__c</fullName>
        <label>Eigenkapital Buchwert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_EigenerShare__c</fullName>
        <label>Eigener Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_EquityYield__c</fullName>
        <formula>( P7S1_EigenerBuchwertinEUR__c -  P7S1_CashZahlung__c ) /  P7S1_BmvTv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equity Yield</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_ExitParticipationBeschreibung__c</fullName>
        <label>Beschreibung Exit Participation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_ExitParticipationBetrag__c</fullName>
        <formula>P7S1_BmvTv__c * P7S1_ExitParticipation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Participation Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_ExitParticipation__c</fullName>
        <label>Exit Participation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_FestplatzierungGewichtet__c</fullName>
        <formula>P7S1_Festplatzierung__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Festplatzierung gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Festplatzierung__c</fullName>
        <label>Festplatzierung</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_FillUpBetrag__c</fullName>
        <formula>P7S1_BmvTv__c *  P7S1_FillUp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fill-Up Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_FillUp__c</fullName>
        <label>Fill-Up</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>P7S1_GrossBarterVolumeGewichtet__c</fullName>
        <formula>P7S1_GrossBarterVolume__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brutto-Barter-Volumen gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_GrossBarterVolume__c</fullName>
        <description>Brutto Barter Volumen auf deren Basis Gegenleistungen definiert werden</description>
        <inlineHelpText>Brutto Barter Volumen auf deren Basis Gegenleistungen definiert werden</inlineHelpText>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_HasDooH7Screen__c</fullName>
        <formula>P7S1_Opportunity__r.Som_DooH7Screen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DooH (7Screen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaBarter__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_HasMediaBarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaDigital__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_HasMediaDigital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital (71M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaLizenz__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_HasMediaLizenz__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lizenz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaPartBarter__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_HasMediaPartBarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teil-Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_HasMediaTV__c</fullName>
        <formula>P7S1_Opportunity__r.P7S1_HasMediaTV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_MN3DooHGewichtet__c</fullName>
        <formula>P7S1_MN3DooH__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 DooH gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_MN3DooH__c</fullName>
        <label>MN3 DooH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalGewichtet__c</fullName>
        <formula>P7S1_Mn3Digital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalInPage__c</fullName>
        <inlineHelpText>Media Netto 3 Digital, Anteil der Display Werbung  (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 Display in page</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3DigitalInStream__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Video Werbung, Anteil der Video Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 Video in Stream</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3Digital__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Werbung</inlineHelpText>
        <label>MN3 Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InPageGewichtet__c</fullName>
        <formula>P7S1_Mn3InPage__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Davon MN3 InPage gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InPage__c</fullName>
        <inlineHelpText>Media Netto 3 Digital, Anteil der Display Werbung  (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 InPage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InStreamGewichtet__c</fullName>
        <formula>P7S1_Mn3InStream__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Davon MN3 InStream gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3InStream__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Video Werbung, Anteil der Video Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 InStream</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TVKIplusDigitalGewichtet__c</fullName>
        <formula>( P7S1_Mn3TvCustomerIntegration__c + P7S1_Mn3Digital__c ) * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 (TV KI + Digital) gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TVKIplusDigital__c</fullName>
        <formula>P7S1_Mn3TvCustomerIntegration__c + P7S1_Mn3Digital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 (TV KI + Digital)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TvCustomerIntegrationGewichtet__c</fullName>
        <formula>P7S1_Mn3TvCustomerIntegration__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 TV Kundenintegration gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TvCustomerIntegration__c</fullName>
        <inlineHelpText>Media Netto 3 des Kunden TV Werbeanteils</inlineHelpText>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Mn3_DandADigitalGewichtet__c</fullName>
        <formula>P7S1_Mn3_DandADigital__c * P7S1_OppProbability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 D&amp;A Digital gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>